<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblue" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_alarm"
        android:textSize="12pt" 
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/count_alarm_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textColor="@color/white"
            android:textSize="10pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count_alarm_txt"
            android:text="@string/count_alarm"
            android:textColor="@color/white"
            android:textSize="8pt" />

        <com.qihoo.unlock.view.SwitchButton
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/time_alarm_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textSize="10pt"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_alarm_txt"
            android:text="@string/time_alarm"
            android:textSize="8pt" 
            android:textColor="@color/white"/>

        <com.qihoo.unlock.view.SwitchButton
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true" 
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_common"
        android:textSize="12pt" 
        android:textColor="@color/white"/>

</LinearLayout>