<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/unlock_counts"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:shadowColor="#44000000"
            android:shadowDx="-10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="95"
            android:textColor="@color/white"
            android:textSize="35pt" />

        <TextView
            android:id="@+id/compare_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:shadowColor="#44000000"
            android:shadowDx="-5"
            android:shadowDy="5"
            android:shadowRadius="6"
            android:text="@string/compare_percentage"
            android:textColor="@color/white"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/yesterday_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#44000000"
                android:shadowDx="-5"
                android:shadowDy="5"
                android:shadowRadius="6"
                android:text="@string/yesterday_total"
                android:textColor="@color/white"
                android:textSize="8pt" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:alpha="0.4"
                android:background="@color/white" />

            <TextView
                android:id="@+id/today_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#44000000"
                android:shadowDx="-5"
                android:shadowDy="5"
                android:shadowRadius="6"
                android:text="@string/today_add"
                android:textColor="@color/white"
                android:textSize="8pt" />
        </LinearLayout>

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/share"
            android:gravity="center"
            android:shadowColor="#44000000"
            android:shadowDx="-5"
            android:shadowDy="5"
            android:shadowRadius="6"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="8pt" />
    </LinearLayout>

    <SlidingDrawer
        android:id="@+id/sliding_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/unlock_detail_list"
        android:handle="@+id/sliding_handle"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sliding_handle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/sliding_handle_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/up_arrow" />

            <TextView
                android:id="@+id/sliding_handle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_detail"
                android:textColor="@color/white"
                android:textSize="8pt" />
        </LinearLayout>

        <ExpandableListView
            android:id="@id/unlock_detail_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp" />
    </SlidingDrawer>

</FrameLayout>